--- a/jaksim_ios/Login/LoginStoryboard.storyboard
+++ b/jaksim_ios/Login/LoginStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tN3-Kb-tDS">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -88,12 +88,131 @@
             </objects>
             <point key="canvasLocation" x="-23" y="72"/>
         </scene>
+        <!--Signup View Controller-->
+        <scene sceneID="ahJ-Rp-E4F">
+            <objects>
+                <viewController storyboardIdentifier="SignupViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tN3-Kb-tDS" customClass="SignupViewController" customModule="jaksim_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NMD-r8-KgE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="AmD-AF-wt8">
+                                <rect key="frame" x="165" y="158" width="84" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="AZi-CS-wNB"/>
+                                    <constraint firstAttribute="width" constant="84" id="CWY-gi-9Gl"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="5mO-vn-VAU">
+                                <rect key="frame" x="20" y="290" width="374" height="66.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="닉네임" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wJ8-8f-0Kp">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oTP-a5-dqy">
+                                        <rect key="frame" x="0.0" y="32.5" width="374" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="FMY-w6-fNS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서비스 이용동의" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wG8-U2-5GT">
+                                <rect key="frame" x="20" y="428.5" width="107.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="lnP-1K-p4x">
+                                <rect key="frame" x="20" y="468.5" width="374" height="39"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="J43-fu-3Yl">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p60-UD-HAH">
+                                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="20" id="Dom-7O-JUC"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="no_check"/>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="약관 전체동의" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENE-go-RAN">
+                                                <rect key="frame" x="24" y="0.0" width="350" height="20"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="h8b-yk-qbj"/>
+                                        </constraints>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wwF-30-vef">
+                                        <rect key="frame" x="0.0" y="38" width="374" height="1"/>
+                                        <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="uaS-Xw-gm0"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akn-hy-U7z">
+                                <rect key="frame" x="20" y="579.5" width="374" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="Jl6-60-fUI"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="no_signup"/>
+                                <connections>
+                                    <action selector="signupButtonDidTap:" destination="tN3-Kb-tDS" eventType="touchUpInside" id="UXE-cI-yCK"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Vz4-zL-8pY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="akn-hy-U7z" firstAttribute="leading" secondItem="Vz4-zL-8pY" secondAttribute="leading" constant="20" id="6WR-UI-PXn"/>
+                            <constraint firstItem="lnP-1K-p4x" firstAttribute="top" secondItem="wG8-U2-5GT" secondAttribute="bottom" constant="19.670000000000002" id="Brs-VU-afA"/>
+                            <constraint firstItem="akn-hy-U7z" firstAttribute="top" secondItem="lnP-1K-p4x" secondAttribute="bottom" constant="72" id="Muy-Oq-afr"/>
+                            <constraint firstItem="5mO-vn-VAU" firstAttribute="top" secondItem="AmD-AF-wt8" secondAttribute="bottom" constant="48" id="TMa-3T-OU3"/>
+                            <constraint firstItem="Vz4-zL-8pY" firstAttribute="trailing" secondItem="5mO-vn-VAU" secondAttribute="trailing" constant="20" id="Trz-mY-wEJ"/>
+                            <constraint firstItem="Vz4-zL-8pY" firstAttribute="trailing" secondItem="akn-hy-U7z" secondAttribute="trailing" constant="20" id="WcE-0w-09Q"/>
+                            <constraint firstItem="5mO-vn-VAU" firstAttribute="leading" secondItem="Vz4-zL-8pY" secondAttribute="leading" constant="20" id="amP-MF-ykk"/>
+                            <constraint firstItem="Vz4-zL-8pY" firstAttribute="bottom" secondItem="5mO-vn-VAU" secondAttribute="bottom" constant="517.5" id="ceq-1Y-zrT"/>
+                            <constraint firstItem="5mO-vn-VAU" firstAttribute="centerX" secondItem="NMD-r8-KgE" secondAttribute="centerX" id="d0N-XA-DFZ"/>
+                            <constraint firstItem="AmD-AF-wt8" firstAttribute="top" secondItem="Vz4-zL-8pY" secondAttribute="top" constant="114" id="lYJ-jU-Jzw"/>
+                            <constraint firstItem="lnP-1K-p4x" firstAttribute="leading" secondItem="5mO-vn-VAU" secondAttribute="leading" id="pzO-oh-qy6"/>
+                            <constraint firstItem="AmD-AF-wt8" firstAttribute="centerX" secondItem="Vz4-zL-8pY" secondAttribute="centerX" id="q1d-uK-DfP"/>
+                            <constraint firstItem="wG8-U2-5GT" firstAttribute="top" secondItem="5mO-vn-VAU" secondAttribute="bottom" constant="72" id="uJN-2Q-hE0"/>
+                            <constraint firstItem="wG8-U2-5GT" firstAttribute="leading" secondItem="5mO-vn-VAU" secondAttribute="leading" id="zaq-rw-hiN"/>
+                            <constraint firstItem="lnP-1K-p4x" firstAttribute="trailing" secondItem="5mO-vn-VAU" secondAttribute="trailing" id="zqD-Bs-pAC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="nickNameTextField" destination="oTP-a5-dqy" id="DFe-KR-ono"/>
+                        <outlet property="profileImageView" destination="AmD-AF-wt8" id="4Ro-MS-Vjg"/>
+                        <outlet property="signupButton" destination="akn-hy-U7z" id="gzV-lE-U58"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uTr-Jx-tAb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="725" y="72"/>
+        </scene>
     </scenes>
     <resources>
         <image name="btn_apple" width="335" height="48"/>
         <image name="btn_kakao" width="335" height="48"/>
         <image name="btn_naver" width="335" height="48"/>
         <image name="logo" width="100" height="100"/>
+        <image name="no_check" width="20" height="20"/>
+        <image name="no_signup" width="335" height="48"/>
+        <image name="profile" width="84" height="84"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
