--- a/jaksim_ios/Login/LoginStoryboard.storyboard
+++ b/jaksim_ios/Login/LoginStoryboard.storyboard
@@ -104,7 +104,7 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="5mO-vn-VAU">
-                                <rect key="frame" x="20" y="290" width="374" height="66.5"/>
+                                <rect key="frame" x="20" y="290" width="374" height="80.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="닉네임" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wJ8-8f-0Kp">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -112,8 +112,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oTP-a5-dqy">
-                                        <rect key="frame" x="0.0" y="32.5" width="374" height="34"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="   닉네임을 설정하세요. (최대 10자)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oTP-a5-dqy">
+                                        <rect key="frame" x="0.0" y="32.5" width="374" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="FMY-w6-fNS"/>
                                         </constraints>
@@ -123,13 +123,13 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서비스 이용동의" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wG8-U2-5GT">
-                                <rect key="frame" x="20" y="428.5" width="107.5" height="20.5"/>
+                                <rect key="frame" x="20" y="442.5" width="107.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="lnP-1K-p4x">
-                                <rect key="frame" x="20" y="468.5" width="374" height="39"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="lnP-1K-p4x">
+                                <rect key="frame" x="20" y="482.5" width="374" height="205"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="J43-fu-3Yl">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="20"/>
@@ -141,6 +141,7 @@
                                                 </constraints>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="no_check"/>
+                                                <state key="selected" image="check"/>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="약관 전체동의" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENE-go-RAN">
                                                 <rect key="frame" x="24" y="0.0" width="350" height="20"/>
@@ -154,16 +155,117 @@
                                         </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wwF-30-vef">
-                                        <rect key="frame" x="0.0" y="38" width="374" height="1"/>
+                                        <rect key="frame" x="0.0" y="39" width="374" height="1"/>
                                         <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="uaS-Xw-gm0"/>
                                         </constraints>
                                     </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="GI6-yM-otR">
+                                        <rect key="frame" x="0.0" y="59" width="374" height="146"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="P6r-cZ-JVu">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emU-oq-FF9">
+                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="IFC-eX-ML2"/>
+                                                        </constraints>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" image="no_check"/>
+                                                        <state key="selected" image="check"/>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yme-ZQ-ouK">
+                                                        <rect key="frame" x="24" y="0.0" width="350" height="20"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title="만 14세 이상입니다.">
+                                                            <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
+                                                        </buttonConfiguration>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="n97-RG-azU"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="uQ4-xx-b8H">
+                                                <rect key="frame" x="0.0" y="42" width="374" height="20"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hm6-lN-qvQ">
+                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="16Q-el-yvo"/>
+                                                        </constraints>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" image="no_check"/>
+                                                        <state key="selected" image="check"/>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="fill" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1uy-y1-p03">
+                                                        <rect key="frame" x="24" y="0.0" width="350" height="20"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="terms" title="(필수) 서비스 이용약관">
+                                                            <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
+                                                        </buttonConfiguration>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="vhF-Hs-6cV"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="z3X-f2-Cdt">
+                                                <rect key="frame" x="0.0" y="84" width="374" height="20"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7YG-75-8Cv">
+                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="sw5-cZ-4iT"/>
+                                                        </constraints>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" image="no_check"/>
+                                                        <state key="selected" image="check"/>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="fill" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dCX-OT-cwP">
+                                                        <rect key="frame" x="24" y="0.0" width="350" height="20"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="terms" title="(필수) 개인정보 처리방침">
+                                                            <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
+                                                        </buttonConfiguration>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="DhQ-aq-MvV"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="met-zJ-bcK">
+                                                <rect key="frame" x="0.0" y="126" width="374" height="20"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1wc-D1-ntH">
+                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="n86-VB-r5Z"/>
+                                                        </constraints>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" image="no_check"/>
+                                                        <state key="selected" image="check"/>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="fill" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HMi-H6-VaI">
+                                                        <rect key="frame" x="24" y="0.0" width="350" height="20"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" image="terms" title="(선택) 마케팅 정보 수신동의">
+                                                            <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
+                                                        </buttonConfiguration>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="y1Q-wP-QJR"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akn-hy-U7z">
-                                <rect key="frame" x="20" y="579.5" width="374" height="48"/>
+                                <rect key="frame" x="20" y="759.5" width="374" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="Jl6-60-fUI"/>
                                 </constraints>
@@ -184,7 +286,6 @@
                             <constraint firstItem="Vz4-zL-8pY" firstAttribute="trailing" secondItem="5mO-vn-VAU" secondAttribute="trailing" constant="20" id="Trz-mY-wEJ"/>
                             <constraint firstItem="Vz4-zL-8pY" firstAttribute="trailing" secondItem="akn-hy-U7z" secondAttribute="trailing" constant="20" id="WcE-0w-09Q"/>
                             <constraint firstItem="5mO-vn-VAU" firstAttribute="leading" secondItem="Vz4-zL-8pY" secondAttribute="leading" constant="20" id="amP-MF-ykk"/>
-                            <constraint firstItem="Vz4-zL-8pY" firstAttribute="bottom" secondItem="5mO-vn-VAU" secondAttribute="bottom" constant="517.5" id="ceq-1Y-zrT"/>
                             <constraint firstItem="5mO-vn-VAU" firstAttribute="centerX" secondItem="NMD-r8-KgE" secondAttribute="centerX" id="d0N-XA-DFZ"/>
                             <constraint firstItem="AmD-AF-wt8" firstAttribute="top" secondItem="Vz4-zL-8pY" secondAttribute="top" constant="114" id="lYJ-jU-Jzw"/>
                             <constraint firstItem="lnP-1K-p4x" firstAttribute="leading" secondItem="5mO-vn-VAU" secondAttribute="leading" id="pzO-oh-qy6"/>
@@ -209,10 +310,12 @@
         <image name="btn_apple" width="335" height="48"/>
         <image name="btn_kakao" width="335" height="48"/>
         <image name="btn_naver" width="335" height="48"/>
+        <image name="check" width="20" height="20"/>
         <image name="logo" width="100" height="100"/>
         <image name="no_check" width="20" height="20"/>
         <image name="no_signup" width="335" height="48"/>
         <image name="profile" width="84" height="84"/>
+        <image name="terms" width="6" height="8"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
